syntax = "proto3";

message PingPong {
    int32 pp = 1;
}